# choreo

./: .gitignore  Cargo.toml  Dockerfile  README.md  choreo.example.toml
.github/workflows/: ci.yml  release.yml
migrations/postgres/: 001_initial.sql
migrations/sqlite/: 001_initial.sql
sdks/python/: README.md  pyproject.toml
sdks/python/choreo/: __init__.py  client.py  event.py  function.py  run.py  step.py
sdks/python/tests/: conftest.py
sdks/python/tests/integration/: test_api_integration.py
sdks/python/tests/unit/: test_client.py  test_worker_loop.py
src/: config.rs  error.rs  lib.rs  main.rs
src/api/: mod.rs
src/concurrency/: mod.rs
src/executor/: mod.rs  step.rs
src/metrics/: mod.rs
src/middleware/: mod.rs
src/models/: mod.rs
src/registry/: mod.rs
src/scheduler/: cron.rs  debounce.rs  mod.rs  priority.rs  throttle.rs
src/storage/: mod.rs  postgres.rs  sqlite.rs
tests/integration/: api_tests.rs  metrics_tests.rs  storage_tests.rs
tests/integration/storage/: sqlite_test.rs
tests/unit/: concurrency_tests.rs  error_tests.rs  executor_tests.rs  middleware_tests.rs  registry_tests.rs
tests/unit/executor/: step_tests.rs
