[package]
name = "choreo"
version = "0.1.4"
edition = "2021"
rust-version = "1.70"
description = "Durable workflow orchestration built in Rust"
license = "MIT OR Apache-2.0"
repository = "https://github.com/tosi-n/choreo"
homepage = "https://github.com/tosi-n/choreo"
documentation = "https://docs.rs/choreo"
readme = "README.md"
keywords = ["workflow", "orchestration", "durable", "async", "tasks"]
categories = ["asynchronous", "web-programming", "database"]
authors = ["tosi-n"]
exclude = ["sdks/", ".github/", "examples/"]

[features]
default = ["postgres", "sqlite"]
postgres = ["sqlx/postgres"]
sqlite = ["sqlx/sqlite"]
full = ["postgres", "sqlite"]

[dependencies]
# Async runtime
tokio = { version = "1.35", features = ["full"] }
async-trait = "0.1"
futures = "0.3"

# Web framework
axum = { version = "0.7", features = ["macros"] }
tower = "0.5"
tower-http = { version = "0.5", features = ["cors", "trace"] }

# Database
sqlx = { version = "0.7", features = ["runtime-tokio", "chrono", "uuid", "json"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Types
uuid = { version = "1.6", features = ["v4", "v7", "serde"] }
chrono = { version = "0.4", features = ["serde"] }

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Logging & tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Config
config = "0.14"
dotenvy = "0.15"

# Utilities
parking_lot = "0.12"
dashmap = "5.5"
regex-lite = "0.1"

[dev-dependencies]
tokio-test = "0.4"
pretty_assertions = "1.4"
temp-dir = "0.1"
proptest = "1.4"
mockall = "0.12"
criterion = { version = "0.5", features = ["html_reports"] }
reqwest = { version = "0.11", features = ["json"] }
test-case = "3.0"
rstest = "0.19"

[[bin]]
name = "choreo"
path = "src/main.rs"

[lib]
name = "choreo"
path = "src/lib.rs"

[[test]]
name = "sqlite_integration"
path = "tests/integration/storage/sqlite_test.rs"

[[test]]
name = "error_tests"
path = "tests/unit/error_tests.rs"

[[test]]
name = "registry_tests"
path = "tests/unit/registry_tests.rs"

[[test]]
name = "concurrency_tests"
path = "tests/unit/concurrency_tests.rs"

[[test]]
name = "middleware_tests"
path = "tests/unit/middleware_tests.rs"

[[test]]
name = "executor_tests"
path = "tests/unit/executor_tests.rs"

[[test]]
name = "step_tests"
path = "tests/unit/executor/step_tests.rs"

[[test]]
name = "storage_tests"
path = "tests/integration/storage_tests.rs"

[[test]]
name = "api_tests"
path = "tests/integration/api_tests.rs"

[[test]]
name = "metrics_tests"
path = "tests/integration/metrics_tests.rs"
