[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "choreo-sdk"
version = "0.1.0"
description = "Python SDK for Choreo - Durable workflow orchestration"
readme = "README.md"
license = "MIT"
requires-python = ">=3.9"
authors = [
    { name = "tosi-n" },
]
keywords = ["workflow", "orchestration", "durable", "async", "tasks"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Framework :: AsyncIO",
    "Typing :: Typed",
]
dependencies = [
    "httpx>=0.25.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
    "black==24.3.0",
    "ruff>=0.1",
    "mypy>=1.0",
]

[project.urls]
Homepage = "https://github.com/tosi-n/choreo"
Documentation = "https://github.com/tosi-n/choreo#readme"
Repository = "https://github.com/tosi-n/choreo"
Issues = "https://github.com/tosi-n/choreo/issues"

[tool.hatch.build.targets.wheel]
packages = ["choreo"]

[tool.black]
line-length = 100
target-version = ["py39"]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]
ignore = ["E501"]
